--- a/nim.cfg
+++ b/nim.cfg
@@ -3,4 +3,26 @@
 -d:nimEmulateOverflowChecks
 --define:useRealtimeGC
 --bound_checks:off
--p:lib
+-p:"lib"
+mm:orc
+
+# nim c -a -d:static fasta2lmdb.nim
+@if static:
+  passL = "-static"
+  passC = "-static"
+  # musl-gcc produces a binary that is much slower than regular gcc for some reason
+  # gcc.exe = "musl-gcc"
+  # gcc.linkerexe = "musl-gcc"
+  
+  passL:"/usr/lib/libz.a"
+  dynlibOverride:"z"
+  # download and build the latest version of LMDB. For example,
+  # $ curl -SLk https://github.com/LMDB/lmdb/archive/refs/tags/LMDB_0.9.29.tar.gz | tar -xzf -
+  # $ cd lmdb-LMDB_0.9.29/libraries/liblmdb/
+  # $ make
+  # $ sudo make install
+  passL:"/usr/local/lib/liblmdb.a"
+  dynlibOverride:"lmdb"
+  passL:"-lpthread"
+  dynlibOverride:"pthread"
+@end
