build.yml: remove test on Ubuntu 18; Python 3 version really old and causing issues. Could use Conda Python instead

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -10,7 +10,7 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [ubuntu-18.04, ubuntu-latest]
+        os: [ubuntu-latest]
         version:
           - stable
           - devel
