--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -2,8 +2,13 @@
 name: Build
 
 on:
-  - push
-  - pull_request
+  push:
+    branches:
+      - master
+      - dev
+  pull_request:
+    branches:
+      - '*'
 
 jobs:
   build:
@@ -14,10 +19,11 @@ jobs:
         version:
           - stable
           - devel
-
+    defaults:
+      run:
+        shell: bash -l {0}
     steps:
     - uses: actions/checkout@v2
-
     # Caching
     - name: Cache choosenim
       id: cache-choosenim
@@ -25,33 +31,28 @@ jobs:
       with:
         path: ~/.choosenim
         key: ${{ runner.os }}-choosenim-stable
-
     - name: Cache nimble
       id: cache-nimble
       uses: actions/cache@v3
       with:
         path: ~/.nimble
         key: ${{ runner.os }}-nimble-stable
-
     - name: Cache influenza.fna.gz
       id: cache-influenza-fna
       uses: actions/cache@v3
       with:
         path: influenza.fna.gz
         key: influenza-fna
-
     # Install Dependencies
     - name: Install dependencies (Linux)
       if: runner.os == 'Linux'
       run: |
         sudo apt-get update
         sudo apt-get -qy install make build-essential curl libtool autoconf zlib1g-dev liblmdb-dev gzip zstd grep
-
     # Install Nim and Nimble
     - uses: iffy/install-nim@v4.1.1
       with:
         version: ${{ matrix.version }}
-
     # Build
     - name: Build executable
       run: |
@@ -78,10 +79,8 @@ jobs:
         ./fasta2lmdb --dbpath flulmdb --seqids seqids.txt > out.fasta
         N=$(grep -c '^>')
         [[ 1000 -eq $N ]] || echo "Expected 1000 entries in out.fasta, but only found $N"
-
     - name: "Build and Copy release binary"
       run: nim c -d:release -o:bin/fasta2lmdb_${{ matrix.os }} fasta2lmdb
-
     - name: Upload Artifact
       if: success()
       uses: actions/upload-artifact@v1.0.0
