--- a/nim.cfg
+++ b/nim.cfg
@@ -6,6 +6,13 @@
 -p:"lib"
 mm:orc
 
+# Static compilation for Arch Linux
+# sudo pacman -S zlib
+# liblmdb.a is not included in the lmdb package so you must download and build the latest version of LMDB. For example,
+# $ curl -SLk https://github.com/LMDB/lmdb/archive/refs/tags/LMDB_0.9.29.tar.gz | tar -xzf -
+# $ cd lmdb-LMDB_0.9.29/libraries/liblmdb/
+# $ make
+# $ sudo make install
 # nim c -a -d:static fasta2lmdb.nim
 @if static:
   passL = "-static"
@@ -16,12 +23,22 @@ mm:orc
   
   passL:"/usr/lib/libz.a"
   dynlibOverride:"z"
-  # download and build the latest version of LMDB. For example,
-  # $ curl -SLk https://github.com/LMDB/lmdb/archive/refs/tags/LMDB_0.9.29.tar.gz | tar -xzf -
-  # $ cd lmdb-LMDB_0.9.29/libraries/liblmdb/
-  # $ make
-  # $ sudo make install
   passL:"/usr/local/lib/liblmdb.a"
+  dynlibOverride:"lmdb"
+  passL:"-lpthread"
+  dynlibOverride:"pthread"
+@end
+
+# Static compilation with Ubuntu 20+
+# sudo apt install liblmdb-dev zlib1g-dev
+# NOTE: LMDB version may not be the latest available version from GitHub
+# nim c -a -d:static fasta2lmdb.nim
+@if static-ubuntu:
+  passL = "-static"
+  passC = "-static"
+  passL:"/usr/lib/x86_64-linux-gnu/libz.a"
+  dynlibOverride:"z"
+  passL:"/usr/lib/x86_64-linux-gnu/liblmdb.a"
   dynlibOverride:"lmdb"
   passL:"-lpthread"
   dynlibOverride:"pthread"
