--- a/nim.cfg
+++ b/nim.cfg
@@ -33,7 +33,7 @@ mm:orc
 # sudo apt install liblmdb-dev zlib1g-dev
 # NOTE: LMDB version may not be the latest available version from GitHub
 # nim c -a -d:static fasta2lmdb.nim
-@if static-ubuntu:
+@if staticUbuntu:
   passL = "-static"
   passC = "-static"
   passL:"/usr/lib/x86_64-linux-gnu/libz.a"
